<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VoyageFormActivity">
    <View
        android:id="@+id/topView"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:background="@color/teal_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view5"
        android:layout_width="409dp"
        android:layout_height="82dp"
        android:background="@drawable/wave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topView" />

    <TextView
        android:id="@+id/topText"
        android:layout_width="437dp"
        android:layout_height="71dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="116dp"
        android:text="@string/TripForm"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/view5"
        app:layout_constraintEnd_toStartOf="@+id/imageView5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/topView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="102dp"
        android:layout_height="59dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="168dp"
        android:contentDescription="@string/top_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/topView"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/travel_icon" />

    <EditText
        android:id="@+id/nom_voyage"
        android:layout_width="339dp"
        android:layout_height="53dp"
        android:autofillHints=""
        android:background="@drawable/round_border"

        android:drawablePadding="16dp"
        android:ems="10"
        android:hint="@string/Trip_title"
        android:inputType="textPersonName"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.347"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topText"
        app:layout_constraintVertical_bias="0.173" />

    <EditText
        android:id="@+id/date_debut"
        android:layout_width="339dp"
        android:layout_height="53dp"
        android:autofillHints=""
        android:background="@drawable/round_border"

        android:drawablePadding="16dp"
        android:ems="10"
        android:hint="@string/date_debut"
        android:inputType="textPersonName"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.347"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topText"
        app:layout_constraintVertical_bias="0.331" />

    <EditText
        android:id="@+id/date_fin"
        android:layout_width="339dp"
        android:layout_height="53dp"
        android:autofillHints=""
        android:background="@drawable/round_border"

        android:drawablePadding="16dp"
        android:ems="10"
        android:hint="@string/date_fin"
        android:inputType="textPersonName"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.347"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topText"
        app:layout_constraintVertical_bias="0.482" />

    <EditText
        android:id="@+id/budget"
        android:layout_width="339dp"
        android:layout_height="53dp"
        android:autofillHints=""
        android:background="@drawable/round_border"

        android:drawablePadding="16dp"
        android:ems="10"
        android:hint="@string/budget"
        android:inputType="textPersonName"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.347"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topText"
        app:layout_constraintVertical_bias="0.643" />

    <Spinner
        android:id="@+id/type_voyage"
        android:layout_width="331dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.384"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view5"
        app:layout_constraintVertical_bias="0.772" />

    <Button
        android:id="@+id/okButton"
        android:layout_width="143dp"
        android:layout_height="51dp"
        android:text="Plan my trip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.948" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="64dp"
        android:layout_height="77dp"
        app:srcCompat="@drawable/ic_baseline_calendar_today_24"
        tools:layout_editor_absoluteX="257dp"
        tools:layout_editor_absoluteY="347dp" />

</androidx.constraintlayout.widget.ConstraintLayout>