<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DiscoverActivity">


    <View
        android:id="@+id/topView"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:background="@color/teal_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view5"
        android:layout_width="409dp"
        android:layout_height="82dp"
        android:background="@drawable/wave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="76dp"
        android:layout_height="82dp"
        android:layout_marginStart="32dp"
        android:foreground="@drawable/traveler_icon"
        app:layout_constraintBottom_toBottomOf="@+id/topView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/topView"
        app:layout_constraintTop_toTopOf="@+id/topView"
        app:layout_constraintVertical_bias="0.275"

        />

    <TextView
        android:id="@+id/textView"
        android:layout_width="107dp"
        android:layout_height="38dp"
        android:text="@string/nom"
        android:textColor="@android:color/white"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.081"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/topView"
        app:layout_constraintVertical_bias="0.603" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="97dp"
        android:layout_height="29dp"
        android:text="@string/prenom"
        android:textColor="@android:color/white"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/topView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.487" />

    <TextView
        android:id="@+id/topText"
        android:layout_width="379dp"
        android:layout_height="34dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="116dp"
        android:text="@string/Discover"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/imageView5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/topView"
        app:layout_constraintTop_toTopOf="parent" />

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view5"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="233dp"
                android:layout_height="390dp"
                app:cardBackgroundColor="#EAFAF1"
                app:cardCornerRadius="30dp"
                app:cardElevation="10dp"
                app:contentPadding="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view5"
                app:layout_constraintVertical_bias="0.0"
                tools:layout_editor_absoluteX="0dp">

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="222dp"
                    android:layout_height="190dp"
                    android:adjustViewBounds="true"
                    android:background="#EAFAF1"
                    android:contentDescription="@string/Discover"
                    android:cropToPadding="true"
                    android:focusable="auto"
                    android:focusableInTouchMode="true"
                    android:foreground="@drawable/golden_view_restau"
                    android:paddingTop="30dp"
                    app:srcCompat="@drawable/golden_view_restau" />

                <TextView
                    android:id="@+id/topText2"
                    android:layout_width="135dp"
                    android:layout_height="55dp"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="250dp"
                    android:text="@string/London"
                    android:textColor="@android:color/black"
                    android:textSize="30sp"
                    android:textStyle="bold|italic" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="233dp"
                android:layout_height="390dp"
                android:padding="40dp"
                app:cardBackgroundColor="#EAFAF1"
                app:cardCornerRadius="30dp"
                app:cardElevation="10dp"
                app:contentPadding="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view5"
                app:layout_constraintVertical_bias="0.0"
                tools:layout_editor_absoluteX="0dp">

                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="222dp"
                    android:layout_height="190dp"
                    android:adjustViewBounds="true"
                    android:background="#EAFAF1"
                    android:contentDescription="@string/Discover"
                    android:cropToPadding="true"
                    android:focusable="auto"
                    android:focusableInTouchMode="true"
                    android:foreground="@drawable/golden_view_restau"
                    android:paddingTop="30dp"
                    app:srcCompat="@drawable/golden_view_restau" />

                <TextView
                    android:id="@+id/topText3"
                    android:layout_width="142dp"
                    android:layout_height="61dp"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="250dp"
                    android:text="@string/Rabat"
                    android:textColor="@android:color/black"
                    android:textSize="30sp"
                    android:textStyle="bold|italic" />



            </androidx.cardview.widget.CardView>


        </LinearLayout>

    </HorizontalScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
